--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,16 @@ a {
   color: unset;
 }
 
+.grow {
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.grow:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
 .wrapper {
   margin: 0 1.5rem;
 }
@@ -85,15 +95,95 @@ a {
           align-items: center;
   width: 100%;
   text-transform: uppercase;
-  height: 40vh;
+  height: 400px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(50, 50, 50, 0.4)), to(rgba(50, 50, 50, 0.4))), url("./assets/burger.jpg");
   background-image: linear-gradient(rgba(50, 50, 50, 0.4), rgba(50, 50, 50, 0.4)), url("./assets/burger.jpg");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
+  background-position: center center;
 }
 
 .hero__title {
+  text-align: center;
   color: white;
   width: 50%;
+}
+
+.food {
+  padding-top: 3rem;
+  background-color: #dbdec0;
+}
+
+.food__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.food__meal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.food__image {
+  height: 200px;
+  width: 200px;
+  border-radius: 100%;
+}
+
+.food__descrip {
+  text-transform: uppercase;
+  color: #131166;
+}
+
+.team__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.team__member {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 2rem;
+}
+
+.team__image {
+  height: 200px;
+  border-radius: 100%;
+}
+
+.team__name {
+  margin-bottom: unset;
 }
 /*# sourceMappingURL=styles.css.map */
